Secure: Enforce tenant isolation and fix route conflicts
1. Implemented strict tenant checks on login and page access for [tenant] routes. Users are now logged out if they access the wrong tenant domain.
2. Removed conflicting [slug] route directory.
3. Fixed IDE type errors in vite.config.js.
4. Added missing localization key auth.login.error_wrong_tenant for EN and ID.

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -12,7 +12,8 @@
             "submit_button": "Continue",
             "loading_button": "Signing in...",
             "footer_text": "Need an account?",
-            "register_link": "Register here"
+            "register_link": "Register here",
+            "error_wrong_tenant": "You do not have access to this workspace. Please login at your own workspace URL."
         },
         "register": {
             "title": "Create Account",
