feat: conditionally hide registration link based on settings
- Update root, global login, and tenant login pages to respect the allow_registration setting.
- Implement automatic redirection from the registration page if disabled.
- Ensure the backend correctly identifies global settings by filtering with tenant_id IS NULL.
- Add translation keys for registration disabled messages in English and Indonesian.
- Clean up debug logs in the auth service and settings store.

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -18,6 +18,7 @@
         "register": {
             "title": "Create Account",
             "subtitle": "Start your journey with us",
+            "disabled_message": "Public registration is currently disabled",
             "name_label": "Full Name",
             "name_placeholder": "John Doe",
             "email_label": "Email",
