--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -18,6 +18,7 @@
         "register": {
             "title": "Buat Akun",
             "subtitle": "Mulai perjalanan Anda bersama kami",
+            "disabled_message": "Pendaftaran publik saat ini dinonaktifkan",
             "name_label": "Nama Lengkap",
             "name_placeholder": "Budi Santoso",
             "email_label": "Email",
