feat: multi-currency support, tenant suspension, and superadmin UI overhaul
- Multi-currency Support:
  - Added currency_code to settings, invoices, and payment services.
  - Implemented money.ts utility for formatting dynamic currencies.
  - Added migrations to include currency_code in the invoices table.
  - Restricted Midtrans payments to IDR as per implementation constraints.

- Tenant Management & Security:
  - Implemented tenant suspension logic: non-superadmin users are blocked from logging into suspended tenants.
  - Enhanced complete_login to respect tenant active status.
  - Fixed UUID handling in audit logs for PostgreSQL.

- Superadmin Panel Enhancements:
  - Overhauled Superadmin dashboard with new stats and quick actions.
  - Improved management pages for Tenants, Users, Plans, and Invoices with filtering, pagination, and modern UI.
  - Refactored Superadmin layout to use global Sidebar and Topbar components.
  - Added I18n support for new Superadmin menu items and labels.

- Misc:
  - Added isActive field consistency between HTTP and Tauri API calls.
  - Improved UI components (Modal, Icon, Sidebar) and global styles.

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -68,6 +68,15 @@
         "users": "Users",
         "team": "Team",
         "roles": "Roles",
+        "tenants": "Tenants",
+        "plans": "Plans",
+        "invoices": "Invoices",
+        "storage": "Storage",
+        "subscription": "Subscription",
+        "audit_logs": "Audit Logs",
+        "system": "System",
+        "exit": "Exit",
+        "super_admin": "Super Admin",
         "settings": "Settings",
         "user_view": "User View",
         "admin_panel": "Admin Panel",
@@ -86,11 +95,18 @@
             "admin_overview": "Admin Overview",
             "user_management": "User Management",
             "global_settings": "Global Settings",
+            "settings": "Settings",
             "team": "Team",
             "roles": "Roles & Permissions",
             "storage": "Storage",
             "subscription": "Subscription",
             "invoices": "Invoices",
+            "superadmin_dashboard": "Super Admin",
+            "tenants": "Tenants",
+            "users": "Users",
+            "plans": "Plans",
+            "audit_logs": "Audit Logs",
+            "system": "System",
             "default": "Workspace"
         }
     },
