--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -68,6 +68,15 @@
         "users": "Pengguna",
         "team": "Tim",
         "roles": "Peran",
+        "tenants": "Tenant",
+        "plans": "Paket",
+        "invoices": "Invoice",
+        "storage": "Penyimpanan",
+        "subscription": "Langganan",
+        "audit_logs": "Log Audit",
+        "system": "Sistem",
+        "exit": "Keluar",
+        "super_admin": "Super Admin",
         "settings": "Pengaturan",
         "user_view": "Tampilan Pengguna",
         "admin_panel": "Panel Admin",
@@ -86,11 +95,18 @@
             "admin_overview": "Ringkasan Admin",
             "user_management": "Manajemen Pengguna",
             "global_settings": "Pengaturan Global",
+            "settings": "Pengaturan",
             "team": "Tim",
             "roles": "Peran & Hak Akses",
             "storage": "Penyimpanan",
             "subscription": "Langganan",
             "invoices": "Invoice",
+            "superadmin_dashboard": "Super Admin",
+            "tenants": "Tenant",
+            "users": "Pengguna",
+            "plans": "Paket",
+            "audit_logs": "Log Audit",
+            "system": "Sistem",
             "default": "Ruang Kerja"
         }
     },
